[gd_scene load_steps=4 format=3 uid="uid://d0c22grldjesx"]

[ext_resource type="Script" uid="uid://c2vqb26gfail3" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dabjlqsplkret" path="res://settings_panel.tscn" id="2_0xm2m"]
[ext_resource type="StyleBox" uid="uid://cjl05af2vyh51" path="res://Styles/themes/BlueBG_theme.tres" id="2_h2yge"]

[node name="Main" type="Control" groups=["main"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="Backgrund_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_h2yge")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="top_panel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = ExtResource("2_h2yge")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/top_panel"]
custom_minimum_size = Vector2(0, 47)
layout_mode = 2

[node name="Menu_btn" type="Button" parent="MarginContainer/VBoxContainer/top_panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MENU"

[node name="GameInfo_lbl" type="Label" parent="MarginContainer/VBoxContainer/top_panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Clicking Game - Ver: 0.1
By GasSapce Games"
horizontal_alignment = 1
vertical_alignment = 1

[node name="gotoOption_btn" type="MenuButton" parent="MarginContainer/VBoxContainer/top_panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "GOTO"
flat = false
item_count = 1
popup/item_0/text = "Bottles"
popup/item_0/id = 0

[node name="Score_lbl" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = " V- Click the Button Below -V"
horizontal_alignment = 1
vertical_alignment = 1

[node name="clickBtn_section" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Click_btn" type="Button" parent="MarginContainer/VBoxContainer/clickBtn_section"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Click Me!"

[node name="upgrade_progressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/clickBtn_section"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0

[node name="info_lbl" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<info>"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Upgrade_btn" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Upgrade"

[node name="SettingsPanel" parent="." instance=ExtResource("2_0xm2m")]
visible = false
layout_mode = 1
